--- a/templates/listar_geracoes.html
+++ b/templates/listar_geracoes.html
@@ -133,11 +133,12 @@
                     <td>{{ geracao['data'] }}</td>
                     <td>{{ geracao['energia_kwh'] }}</td>
                     <td class="actions">
-                        <a href="{{ url_for('editar_geracao', id=geracao['id']) }}">Editar</a> | 
-                        <a href="{{ url_for('excluir_geracao', id=geracao['id']) }}" onclick="return confirm('Tem certeza que deseja excluir?');">Excluir</a>
+                        <a href="{{ url_for('editar_geracao', id=geracao['id_geracao']) }}">Editar</a> | 
+                        <a href="{{ url_for('excluir_geracao', id=geracao['id_geracao']) }}" onclick="return confirm('Tem certeza que deseja excluir?');">Excluir</a>
                     </td>
                 </tr>
             {% endfor %}
+
         </tbody>
     </table>
 </body>
