--- a/templates/cadastrar_geracao.html
+++ b/templates/cadastrar_geracao.html
@@ -41,6 +41,8 @@
             <div class="d-flex justify-content-between">
                 <a href="/" class="btn btn-outline-secondary">Voltar</a>
                  <div>
+                    <a href="/consulta" class="btn btn-info me-2">Consultar Geração</a>
+                    <a href="/listar_geracoes" class="btn btn-info me-2">Editar Geração</a>
                     <a href="{{ url_for('importar_planilha') }}" class="btn btn-info me-2">Importar via Planilha</a>
                     <button type="submit" class="btn btn-success">Salvar</button>
                 </div>
